La revue de littérature est maintenant un chapitre normal

--- a/mainETS_francais.tex
+++ b/mainETS_francais.tex
@@ -178,10 +178,9 @@
 
 \end{introduction}
 
-%%- Décommenter pour section revue de littérature, pour les thèses par article -%%
-%\begin{revuedelitterature}
-%%
-%\end{revuedelitterature}
+%%- Décommenter pour chapitre revue de littérature, pour les thèses par article -%%
+%\chapter{Revue de littérature}
+
 
 %%- Premier chapitre de démonstration -%%
 \chapter{Test de long titre de Chapitre, avec retour à la ligne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque justo justo, porta sagittis feugiat eget, ornare rhoncus ligula. Nunc non odio sed lacus rutrum rhoncus.}
