--- a/mainETS_english.tex
+++ b/mainETS_english.tex
@@ -178,8 +178,9 @@
 \end{introduction}
 
 %%- Uncomment the literature review for a thesis by articles -%%
-%\chapter{Literature review}
+%\begin{literaturereview}
 
+%\end{literaturereview}
 
 %%- First demo chapter -%%
 \chapter{Long chapter tite, with linebreak. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque justo justo, porta sagittis feugiat eget, ornare rhoncus ligula. Nunc non odio sed lacus rutrum rhoncus.}
