--- a/mainETS_francais.tex
+++ b/mainETS_francais.tex
@@ -179,8 +179,9 @@
 \end{introduction}
 
 %%- Décommenter pour chapitre revue de littérature, pour les thèses par article -%%
-%\chapter{Revue de littérature}
+%\begin{revuedelitterature}
 
+%\end{revuedelitterature}
 
 %%- Premier chapitre de démonstration -%%
 \chapter{Test de long titre de Chapitre, avec retour à la ligne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque justo justo, porta sagittis feugiat eget, ornare rhoncus ligula. Nunc non odio sed lacus rutrum rhoncus.}
